--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Products/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Products/Index.cshtml
@@ -15,7 +15,8 @@
     var maxStock = ViewData["maxStock"] != null ? (int)ViewData["maxStock"] : (int?)null;
 }
 
-<div class="container" id="administration-index">
+<div class="container" id="administration-index" style="padding-bottom: 10rem;">
+
     <h1 class="text-center mb-4 display-4 fw-600" style="color: var(--primary-color);">
         Product Management
         <hr class="mx-auto" style="width: 120px; height: 3px; background: var(--secondary-color); opacity: 1;">
