--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Showcase/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Showcase/Index.cshtml
@@ -44,7 +44,7 @@
 @Html.Partial("_FiltersPartial")
 
 <!-- CONTENEDOR DINÁMICO -->
-<div id="tabContent">
+<div id="tabContent" class="pb-5">
     @if (activeTab == "challenges")
     {
         @Html.Partial("_ChallengesPartial", Model)
