--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Orders/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Orders/Index.cshtml
@@ -5,61 +5,63 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Orders</h1>
+<div class="container w-100 mb-5">
+    <h1>Orders</h1>
 
-<p>
-    <a asp-action="Create">Create New Order</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Creation Date
-                @* @Html.DisplayNameFor(model => model.CreationDate) *@
-            </th>
-            <th>
-                Status
-                @* @Html.DisplayNameFor(model => model.Status) *@
-            </th>
-            <th>
-                User
-                @* @Html.DisplayNameFor(model => model.User) *@
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreationDate)
-            </td>
-            <td>
-                    @Html.DisplayFor(modelItem => item.OrderStatusId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.User.Email)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+    <p>
+        <a asp-action="Create">Create New Order</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Creation Date
+                    @* @Html.DisplayNameFor(model => model.CreationDate) *@
+                </th>
+                <th>
+                    Status
+                    @* @Html.DisplayNameFor(model => model.Status) *@
+                </th>
+                <th>
+                    User
+                    @* @Html.DisplayNameFor(model => model.User) *@
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreationDate)
+                </td>
+                <td>
+                        @Html.DisplayFor(modelItem => item.OrderStatusId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.User.Email)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>
 
-@* Poner botones de página Siguiente y Anterior *@ 
-@{
-    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
-    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
-}
-<a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)"
-   class="btn btn-outline-secondary @prevDisabled">
-    Anterior
-</a>
-<a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)"
-   class="btn btn-outline-secondary @nextDisabled">
-    Siguiente
-</a> 
+    @* Poner botones de página Siguiente y Anterior *@ 
+    @{
+        var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+        var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+    }
+    <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex - 1)"
+       class="btn btn-outline-secondary @prevDisabled">
+        Anterior
+    </a>
+    <a asp-action="Index" asp-route-pageNumber="@(Model.PageIndex + 1)"
+       class="btn btn-outline-secondary @nextDisabled">
+        Siguiente
+    </a> 
+</div>
