--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
@@ -220,7 +220,7 @@
                 <div class="col-12 text-center">
                     <p class="mb-0">
                         &copy; 2025 Vestigio -
-                        <a asp-controller="Home" asp-action="Privacy" class="text-light">Política de Privacidad</a>
+                        <a asp-controller="Home" asp-action="Privacy" class="text-light">Privacy Policy</a>
                     </p>
                 </div>
             </div>
