--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Shared/_LoginPartial.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Shared/_LoginPartial.cshtml
@@ -130,11 +130,11 @@
         <div class="auth-buttons">
             <a class="btn auth-btn login-btn" asp-area="Identity" asp-page="/Account/Login">
                 <i class="bi bi-box-arrow-in-right"></i>
-                Iniciar Sesión
+                Login
             </a>
             <a class="btn auth-btn register-btn" asp-area="Identity" asp-page="/Account/Register">
                 <i class="bi bi-person-plus"></i>
-                Registrarse
+                Sign in
             </a>
         </div>
     }
