--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Showcase/_ProductsPartial.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Showcase/_ProductsPartial.cshtml
@@ -10,7 +10,7 @@ else
         @foreach (var product in Model)
         {
             <div class="col-md-6 col-lg-4 col-xl-3">
-                <div class="product-card">
+                <div class="product-card h-100">
                     <div class="product-image">
                         @if (product.Images?.Any() == true)
                         {
@@ -22,7 +22,7 @@ else
                         </div>
                     </div>
                     <div class="product-info">
-                        <h3 class="product-title">@product.Name</h3>
+                        <h4 class="product-title">@product.Name</h4>
                         <p class="product-description">
                             @product.Description.Substring(0, Math.Min(100, product.Description.Length))...
                         </p>
