--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Shared/_LoginPartial.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Shared/_LoginPartial.cshtml
@@ -128,11 +128,11 @@
     {
         <!-- Botones de autenticación -->
         <div class="auth-buttons">
-            <a class="btn auth-btn login-btn" asp-area="Identity" asp-page="/Account/Login">
+            <a class="btn auth-btn login-btn fw-bold" asp-area="Identity" asp-page="/Account/Login">
                 <i class="bi bi-box-arrow-in-right"></i>
                 Login
             </a>
-            <a class="btn auth-btn register-btn" asp-area="Identity" asp-page="/Account/Register">
+            <a class="btn auth-btn register-btn  fw-bold" asp-area="Identity" asp-page="/Account/Register">
                 <i class="bi bi-person-plus"></i>
                 Sign in
             </a>
