--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/UserOrders/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/UserOrders/Index.cshtml
@@ -149,6 +149,7 @@
             "Pending" => "bg-warning text-dark",
             "Confirmed" => "bg-success",
             "Cancelled" => "bg-danger",
+            "Sent" => "bg-info",
             _ => "bg-secondary"
         };
     }
