--- a/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Cart/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - ACTUAL/Vestigio/Vestigio/Views/Cart/Index.cshtml
@@ -140,7 +140,7 @@
                             <h3 class="h5 mb-3">Your Shopping Cart is Empty</h3>
                             <p class="text-muted mb-4">Explore the challenges and find something special!</p>
                             <a href="@Url.Action("Index", "Showcase")" class="btn btn-dark hover-scale px-5">
-                                <i class="bi bi-bag me-2"></i>Start Shopping
+                                <i class="bi bi-bag me-2"></i>Start Exploring!
                             </a>
                         </div>
                     }
