--- a/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Showcase/_FiltersPartial.cshtml
+++ b/SERVER/VESTIGIO PROYECT/Vestigio/Vestigio/Views/Showcase/_FiltersPartial.cshtml
@@ -116,12 +116,12 @@
                     <div class="row g-2">
                         <div class="col">
                             <input type="number" name="minPrice" class="form-control"
-                                   placeholder="Mín" value="@filters?.MinPrice"
+                                   placeholder="Min" value="@filters?.MinPrice"
                                    min="0" step="0.01" />
                         </div>
                         <div class="col">
                             <input type="number" name="maxPrice" class="form-control"
-                                   placeholder="Máx" value="@filters?.MaxPrice"
+                                   placeholder="Max" value="@filters?.MaxPrice"
                                    min="0" step="0.01" />
                         </div>
                     </div>
@@ -133,19 +133,19 @@
                     <div class="row g-2">
                         <div class="col">
                             <input type="number"
-                                   name="minLevel"
+                                   name="minProductLevel"
                                    class="form-control"
                                    placeholder="Mín"
-                                   value="@filters?.MinLevel"
+                                   value="@filters?.MinProductLevel"
                                    min="1"
                                    max="10" />
                         </div>
                         <div class="col">
                             <input type="number"
-                                   name="maxLevel"
+                                   name="maxProductLevel"
                                    class="form-control"
                                    placeholder="Máx"
-                                   value="@filters?.MaxLevel"
+                                   value="@filters?.MaxProductLevel"
                                    min="1"
                                    max="10" />
                         </div>
